Ari updates CSS

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Fredoka+One&family=Skranji&display=swap" rel="stylesheet">
+    <title>Mad Lib</title>
 </head>
 
 <body>
     <header>
-        <h1>My App</h1>
-        <img src="assets/big-logo.png" />
+        <img src="assets/shrek_logo.png" />
+        <h1>Mad Lib</h1>
     </header>
     
     <main>
