Ari styles all input

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <br>
             In the shape of an <span id="noun2-display" >___</span> on her forehead
             <br>
-            Well the years start<span id="verb3-display" >___</span> and they don't stop
+            Well the years start<span id="verb3-display" >___</span> and they don't stop coming
             <br>
             Fed to the rules and I <span id="verb4-display" >___</span> the ground running
             <br>
@@ -67,7 +67,9 @@
         </p>
          
         <button id="submit">Submit</button>
-        
+        <div>
+        <img id="donkey" src="assets/Donkey.png" />
+        </div>
     </main>
 
     <footer>
